--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- LOGO WEB / FAVICON -->
-    <link rel="icon" href="assets/logo.png" type="image/png">
+    <link rel="icon" href="assets/Logo.png" type="image/png">
     <link rel="apple-touch-icon" href="assets/logo.png">
 
     <link rel="stylesheet" href="style.css">
@@ -107,3 +107,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
