--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- LOGO WEB / FAVICON -->
-    <link rel="icon" href="assets/Logo.png" type="image/png">
+    <link rel="icon" href="assets/logo.png" type="image/png">
     <link rel="apple-touch-icon" href="assets/logo.png">
 
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
     <!-- LOGO -->
     <a href="/" class="logo">
         <div class="logo-img">
-            <img src="assets/Logo.png" alt="404 Coders">
+            <img src="assets/logo.png" alt="404 Coders">
         </div>
 
         <div class="logo-text">
@@ -107,4 +107,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
