--- a/code.html
+++ b/code.html
@@ -23,7 +23,7 @@
     <!-- LOGO -->
     <a href="/" class="logo">
         <div class="logo-img">
-            <img src="assets/Logo.png" alt="TMCLibrary">
+            <img src="assets/logo.png" alt="TMCLibrary">
         </div>
 
         <div class="logo-text">
@@ -166,3 +166,4 @@ loadCode();
 <script src="mammoth.js"></script>
 </body>
 </html>
+
