--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
             <h3>Hẹn hò nhưng không yêu <span class="tag">python</span></h3>
             <p>Code hiển thị lời bài hát với hiệu ứng màu sắc đẹp mắt</p>
 
-            <a href="https://github.com/ten_repo" target="_blank">
+            <a href="henhonhungkhongyeu.html" target="_blank">
                 <button class="btn btn-code">🔗 Link code</button>
             </a>
 
-            <a href="https://www.youtube.com/watch?v=xxxx" target="_blank">
+            <a href="https://www.tiktok.com/@404.coders/video/7605163099422772500?is_from_webapp=1&sender_device=pc&web_id=7604475990471001617" target="_blank">
                 <button class="btn btn-video">🎵 Xem video</button>
             </a>
         </div>
@@ -107,5 +107,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
