--- a/henhonhungkhongyeu.html
+++ b/henhonhungkhongyeu.html
@@ -10,8 +10,8 @@
 
   <head>
     <!-- LOGO WEB / FAVICON -->
-    <link rel="icon" href="assets/Logo.png" type="image/png">
-    <link rel="apple-touch-icon" href="assets/Logo.png">
+    <link rel="icon" href="assets/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="assets/logo.png">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +21,7 @@
     <!-- LOGO -->
     <a href="/" class="logo">
         <div class="logo-img">
-            <img src="assets/Logo.png" alt="TMCLibrary">
+            <img src="assets/logo.png" alt="TMCLibrary">
         </div>
 
         <div class="logo-text">
@@ -143,3 +143,4 @@ loadCode();
 <script src="script.js"></script>
 </body>
 </html>
+
